[gd_scene load_steps=15 format=3 uid="uid://bgwnni38np83r"]

[ext_resource type="Script" path="res://Interactable/Arena/Scripts/key_door.gd" id="1_oi845"]
[ext_resource type="Texture2D" uid="uid://3j4cafqcaasg" path="res://Levels/Sprites/Dungeon Prison/Assets/Doors.png" id="2_74fk6"]
[ext_resource type="Resource" uid="uid://y6ouymn7bw81" path="res://Interactable/Items/Resources/key_arena.tres" id="2_ovyfg"]
[ext_resource type="AudioStream" uid="uid://gvtxfq1h3ngc" path="res://Interactable/Arena/Sounds/locked_door.wav" id="2_pabew"]
[ext_resource type="AudioStream" uid="uid://hf86g0ie6v2a" path="res://Interactable/Arena/Sounds/unlock_door.wav" id="3_d1uxy"]
[ext_resource type="Script" path="res://GeneralNodes/Scripts/persistent_data_handler.gd" id="3_pr80s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_anj27"]
size = Vector2(32, 45)

[sub_resource type="Animation" id="Animation_qr1gy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_rdauo"]
resource_name = "close_door"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_narlb"]
resource_name = "closed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_wh80r"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_gnk44"]
resource_name = "open_door"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2wlhw"]
_data = {
"RESET": SubResource("Animation_qr1gy"),
"close_door": SubResource("Animation_rdauo"),
"closed": SubResource("Animation_narlb"),
"open": SubResource("Animation_wh80r"),
"open_door": SubResource("Animation_gnk44")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_abh27"]
size = Vector2(28, 19)

[node name="KeyDoor" type="Node2D"]
process_mode = 3
script = ExtResource("1_oi845")
key_item = ExtResource("2_ovyfg")
locked_audio = ExtResource("2_pabew")
open_audio = ExtResource("3_d1uxy")

[node name="PersistentDataHandler" type="Node" parent="."]
script = ExtResource("3_pr80s")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(16, -24)
texture = ExtResource("2_74fk6")
hframes = 2
vframes = 2

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
light_mask = 0
visibility_layer = 16
position = Vector2(16, -25.5)
shape = SubResource("RectangleShape2D_anj27")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2wlhw")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
bus = &"SFX"

[node name="InteractArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea2D"]
position = Vector2(16, -7.5)
shape = SubResource("RectangleShape2D_abh27")
debug_color = Color(0.537618, 0.568415, 0, 0.42)
